--- a/dna/zomes/multisig/code/Cargo.toml
+++ b/dna/zomes/multisig/code/Cargo.toml
@@ -12,6 +12,7 @@ hdk = "=0.0.42-alpha5"
 hdk_proc_macros = "=0.0.42-alpha5"
 holochain_wasm_utils = "=0.0.42-alpha5"
 holochain_json_derive = "0.0"
+constants = { path = "../../../constants/" }
 
 [lib]
 path = "src/lib.rs"
