--- a/dna/zomes/multisig/code/Cargo.toml
+++ b/dna/zomes/multisig/code/Cargo.toml
@@ -12,7 +12,7 @@ hdk = "=0.0.46-alpha1"
 hdk_proc_macros = "=0.0.46-alpha1"
 holochain_wasm_utils = "=0.0.46-alpha1"
 holochain_json_derive = "0.0"
-constants = { path = "../../../constants/" }
+constants = { path = "../../../lib/constants/" }
 
 [lib]
 path = "src/lib.rs"
