--- a/dna/zomes/organizations/code/Cargo.toml
+++ b/dna/zomes/organizations/code/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "companies"
+name = "organizations"
 version = "0.1.0"
 authors = ["hc-scaffold-framework"]
 edition = "2018"
@@ -9,8 +9,10 @@ serde = "1.0"
 serde_json = { version = "1.0", features = ["preserve_order"] }
 serde_derive = "1.0"
 hdk = "=0.0.46-alpha1"
+hdk_proc_macros = "=0.0.46-alpha1"
 holochain_wasm_utils = "=0.0.46-alpha1"
 holochain_json_derive = "0.0"
+decoders = { path = "../../../lib/decoders" }
 
 [lib]
 path = "src/lib.rs"
