--- a/dna/zomes/organizations/code/Cargo.toml
+++ b/dna/zomes/organizations/code/Cargo.toml
@@ -13,6 +13,7 @@ hdk_proc_macros = "=0.0.46-alpha1"
 holochain_wasm_utils = "=0.0.46-alpha1"
 holochain_json_derive = "0.0"
 decoders = { path = "../../../lib/decoders" }
+structures = { path = "../../../lib/structures" }
 
 [lib]
 path = "src/lib.rs"
